Функция nameToId, разные валюты, копирование на С:

--- a/cfg_price.cfg
+++ b/cfg_price.cfg
@@ -1,4 +1,4 @@
-[basic]
+    [basic]
 filename_in   = new_leyard.xlsx
 filename_out  = csv_leyard.csv
 sheetname     = Лист1
@@ -20,4 +20,5 @@ sheetname     = Лист1
 Наименование = бренд группа наименование
 Продажа     = цена1
 Закупка     = цена1 * 0.975
+Валюта      = валюта
 ?           = ?
