Во внешнем цикле перебор всех страниц. В цене удаляю неотображаемый символ

--- a/cfg_price.cfg
+++ b/cfg_price.cfg
@@ -1,24 +1,31 @@
     [basic]
 filename_in   = new_leyard.xlsx
 filename_out  = csv_leyard.csv
-sheetname     = Лист1
+sheetname     = все
 
 
                             #     !!!  ВАЖНО !!!    Имена полей должны быть lowercase !
 [cols_in]                   # Проставить номер импортируемым колонкам. 
-бренд       = 1
-группа      = 2
+группа_     = 1
+подгруппа1  = 2
+подгруппа2  = 3
 наименование= 3
-цена1       = 4
-валюта      = 5
+код_        = 6
+description = 7
+partnumber  = 8
+цена2       = 9
+цена1       = 10
+примечание  = 11
 
 
 [cols_out]
-Код         = наименование
-Бренд       = бренд
-Группа      = группа
-Наименование = бренд группа наименование
-Продажа     = цена1
-Закупка     = цена1 * 0.975
-Валюта      = валюта
+Код         = код_
+Код производителя = partnumber
+Закупка     = цена1 * 1.35
+Продажа     = цена2 * 1.35
+Описание    = LEYARD группа_ код_ description, partnumber . примечание
+Группа      = группа_
+Подгруппа   = подгруппа1 подгруппа2
+Наименование= LEYARD группа_ код_, partnumber
+Бренд       = LEYARD 
 ?           = ?
